[metadata]
license = Apache License
license_file = LICENSE 

classifiers = 
Programming Language :: Python :: 3.8
Programming Language :: Python :: 3.9
Operating Syatem :: OS Independent


[options]
install_requires = 
    py-youtube==1.1.7
    ensure==1.0.2
Python_requires = >=3.8

[options.extras_require]
testing = 
    pytest>=7.1.3
    tox>=3.25.1
    flake8>=5.0.4
    mypy>=0.971

[options.package_data]
NexusView = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py